--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Heart Game</title>
+  <link rel="shortcut icon" href="./src/assets/icons8-favorite-16.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+  <meta name="description" content="A fun and interactive heart-themed game built with modern web technologies." />
+  <meta name="keywords" content="heart, game, interactive, web, fun, bangers, tailwind" />
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
